Graphics are added correctly.

--- a/EcuationDrawerCocoa-master/EcuationDrawer/EcuationDrawer/PreferencesWindow.xib
+++ b/EcuationDrawerCocoa-master/EcuationDrawer/EcuationDrawer/PreferencesWindow.xib
@@ -9,6 +9,7 @@
             <connections>
                 <outlet property="addGraphicButton" destination="bSU-US-Bjm" id="AEl-eZ-WfT"/>
                 <outlet property="colorWell" destination="trn-po-UKD" id="h1H-2f-m8b"/>
+                <outlet property="drawGraphicButton" destination="0pS-Xw-Tn2" id="VRF-Ny-qjn"/>
                 <outlet property="ecuationComboBox" destination="qzp-SF-v6r" id="6eS-Jw-FES"/>
                 <outlet property="ecuationTableView" destination="CYc-sM-Y7c" id="EEC-xB-vT9"/>
                 <outlet property="nameTextField" destination="mX6-C5-zWE" id="YrJ-8c-0q5"/>
@@ -226,6 +227,17 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </tableHeaderView>
                     </scrollView>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0pS-Xw-Tn2">
+                        <rect key="frame" x="526" y="31" width="134" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Pintar gráfica" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="wkg-hb-a11">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="drawGraphic:" target="-2" id="5n8-Qf-JdX"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <connections>
