Deleted duplicated folder

--- a/EcuationDrawer/EcuationDrawer/PreferencesWindow.xib
+++ b/EcuationDrawer/EcuationDrawer/PreferencesWindow.xib
@@ -9,6 +9,7 @@
             <connections>
                 <outlet property="addGraphicButton" destination="bSU-US-Bjm" id="AEl-eZ-WfT"/>
                 <outlet property="colorWell" destination="trn-po-UKD" id="h1H-2f-m8b"/>
+                <outlet property="drawGraphicButton" destination="0pS-Xw-Tn2" id="VRF-Ny-qjn"/>
                 <outlet property="ecuationComboBox" destination="qzp-SF-v6r" id="6eS-Jw-FES"/>
                 <outlet property="ecuationTableView" destination="CYc-sM-Y7c" id="EEC-xB-vT9"/>
                 <outlet property="nameTextField" destination="mX6-C5-zWE" id="YrJ-8c-0q5"/>
@@ -198,6 +199,7 @@
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </tableHeaderCell>
                                             <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" allowsUndo="NO" alignment="left" title="Text Cell" allowsEditingTextAttributes="YES" id="IjZ-H4-4GR">
+                                                <numberFormatter key="formatter" formatterBehavior="default10_4" numberStyle="decimal" minimumIntegerDigits="1" maximumIntegerDigits="2000000000" maximumFractionDigits="3" id="2O2-bi-SXN"/>
                                                 <font key="font" metaFont="system"/>
                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -213,7 +215,7 @@
                             </subviews>
                         </clipView>
                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="XQs-c7-Tsl">
-                            <rect key="frame" x="1" y="113" width="290" height="15"/>
+                            <rect key="frame" x="-7" y="8" width="0.0" height="15"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="21D-7h-Rvy">
@@ -225,6 +227,17 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </tableHeaderView>
                     </scrollView>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0pS-Xw-Tn2">
+                        <rect key="frame" x="526" y="31" width="134" height="32"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <buttonCell key="cell" type="push" title="Pintar gráfica" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="wkg-hb-a11">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="drawGraphic:" target="-2" id="5n8-Qf-JdX"/>
+                        </connections>
+                    </button>
                 </subviews>
             </view>
             <connections>
